# FotMobDataAnalysis

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
fotmob_analytics/: __init__.py  analysis.py  charts.py  cli.py  client.py  config.py  dataset.py  details.py  metrics.py  peers.py  roles.py  team.py  util.py  viz.py
tests/: conftest.py  test_charts.py  test_client.py  test_dataset.py  test_live.py  test_metrics.py  test_peers_config.py  test_roles.py  test_util.py  test_viz.py
